Multiple small changes and bugfixes relating to ssh, paths being used and security, as well as further implementation of AddCrop with only a final step missing